final-devops-project/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: visitor-app
spec:
  selector: { app: visitor-app }
  ports:
    - port: 80
      targetPort: 3000
