final-devops-project/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitor-app
spec:
  ingressClassName: nginx
  rules:
    - host: visitor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visitor-app
                port: { number: 80 }
